# jz-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
jz_cli/: config.py  idris.py  main.py  scratch.py  setup.py  slurm.py  ssh.py  sync.py
